appId: "com.example.jetnews"

---
- runFlow: ../tests/setup.yaml
- runFlow: ../tests/hometest.yaml

- assertVisible:
    id: "android:id/content" # Asserts the sidebar drawer content 

- tapOn: "Interests"
- assertVisible:
    id: "android:id/content" # Asserts block of IDs on the Interests page
- assertVisible: "Interests" # Verifies that Interests text is Visible on the page

# Asserts for relevant texts are visible
- assertVisible: "Search"
- assertVisible: "Open navigation drawer"
- assertVisible: "Topics"
- assertVisible: "People"
- assertVisible: "Publications"

- tapOn: "People"
- tapOn:
    point: "50%,39%" # Selects topic Kris Vriloc 
- tapOn:
    point: "92%,87%" # Selects topic Kemarrin Muuda

- tapOn: "Publications"
- tapOn:
    point: "92%,63%" # Selects topic Jectpack Ark 
- tapOn:
    point: "50%,31%" # Selects topic Compose Mix

- tapOn: "Topics"
- tapOn:
    point: "50%,73%" # Selects topic Java
- tapOn:
    point: "50%,27%" # Selects topic Jetpack Compose

# Scrolls page until Google @ the bottom of page is Visible
- scrollUntilVisible:
    element:
      text: "Google"
    direction: DOWN 
    timeout: 50000 
    speed: 40 
    visibilityPercentage: 100 
    centerElement: false 

 


